--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h2>CAR SALES</h2>
                 <ul class="styled">
                    <li><a href="budgetcar.html">Budget Car</a></li>
-                   <li><a href="compact.hmtl">Compact Hatch</a></li>
+                   <li><a href="compact.html">Compact Hatch</a></li>
                    <li><a href="execututive.html">Executive SUV</a></li>
                    <li><a href="compactfamily.html">Compact Family Car</a></li>
                    <li><a href="familycar.html">Family Car</a></li>
